# media_manager

./: .env  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yaml  pyproject.toml
app/: app.py  crud.py  db.py  file_routes.py  helpers.py  routes.py
app/models/: models.py  schemas.py
app/services/: helpers.py
config/: config.py
tests/: test_app.py
