[tool.poetry]
name = "media_manager"
version = "0.1.0"
description = ""
authors = ["Кабисова Кристина Джемаловна <k.kabisova@atol.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.32"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
psycopg2 = "^2.9.9"
python-multipart = "^0.0.9"
aioboto3 = "^13.1.1"
google = "^3.0.0"
google-cloud-storage = "^2.18.2"
aiofiles = "^24.1.0"
python-dotenv = "^1.0.1"
pytest = "^8.3.2"
httpx = "^0.27.2"
sqlalchemy-utils = "^0.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
